--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vital",
   "version": "1.0.0",
   "description": "Starter template for Vite with React (TypeScript). Supports Tailwind with CSS-Modules. Jest and @react/testing-library configured and ready to go. Also ESLint, Prettier, Husky, Commit-lint and Atomic Design for components.",
-  "homepage": "https://github.com/jvidalv/vital#readme",
+  "homepage": "https://en1gma45.github.io/elementals_studio_test",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jvidalv/vital.git"
@@ -39,7 +39,9 @@
     "start": "vite",
     "build": "vite build",
     "test": "jest",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@heroicons/react": "2.0.13",
@@ -64,6 +66,7 @@
     "eslint-plugin-import": "2.27.4",
     "eslint-plugin-react": "7.32.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "gh-pages": "^5.0.0",
     "husky": "8.0.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.3.1",
