--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test": "jest",
     "postinstall": "husky install",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@heroicons/react": "2.0.13",
