--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vital",
   "version": "1.0.0",
   "description": "Starter template for Vite with React (TypeScript). Supports Tailwind with CSS-Modules. Jest and @react/testing-library configured and ready to go. Also ESLint, Prettier, Husky, Commit-lint and Atomic Design for components.",
-  "homepage": "https://en1gma45.github.io/elementals_studio_test",
+  "homepage": "https://en1gma45.github.io/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jvidalv/vital.git"
